--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 
-spring.redis.database=0
-spring.redis.host=localhost
-spring.redis.port=6379
-spring.redis.password=mypass
-spring.redis.timeout=60000
+#spring.redis.database=0
+#spring.redis.host=localhost
+#spring.redis.port=6379
+#spring.redis.password=mypass
+#spring.redis.timeout=60000
+
+#spring.cache.type=none
+#spring.cache.type=redis
+logging.level.org.springframework.cache=TRACE
