--- a/pom.xml
+++ b/pom.xml
@@ -47,10 +47,10 @@
 			<artifactId>jedis</artifactId> <version>3.3.0</version> <type>jar</type> 
 			</dependency> -->
 
-		<!-- <dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-redis</artifactId>
-		</dependency> -->
+		</dependency>
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
